--- a/package.yaml
+++ b/package.yaml
@@ -38,7 +38,6 @@ executables:
       - -threaded
       - -rtsopts
       - -with-rtsopts=-N
-    language: GHC2021
     dependencies:
       - base >= 4.18 && < 5
       - codecrafters-redis
@@ -53,7 +52,11 @@ tests:
     ghc-options:
       - -Wall
       - -threaded
-    language: GHC2021
     dependencies:
+      - base >= 4.18 && < 5
       - codecrafters-redis
-      - hspec
+      - time
+      - tasty
+      - tasty-hedgehog
+      - tasty-hunit
+      - hedgehog
