--- a/package.yaml
+++ b/package.yaml
@@ -44,6 +44,7 @@ executables:
       - mtl
       - network-simple
       - fast-logger
+      - optparse-applicative
 
 tests:
   codecrafters-redis-test:
