--- a/package.yaml
+++ b/package.yaml
@@ -32,6 +32,7 @@ library:
     - time
     - random
     - async
+    - attoparsec
 
 executables:
   codecrafters-redis-exe:
@@ -69,3 +70,4 @@ tests:
       - parsec
       - async
       - stm
+      - attoparsec
