Handle set user command

--- a/package.yaml
+++ b/package.yaml
@@ -34,6 +34,8 @@ library:
     - async
     - attoparsec
     - scientific
+    - cryptonite
+    - memory
 
 executables:
   codecrafters-redis-exe:
